--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,2 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+@import "./assets/scss/breakpoints.scss";
+@import "./assets/scss/general.scss";
