--- a/src/style.scss
+++ b/src/style.scss
@@ -1,2 +1,4 @@
 @import "./assets/scss/breakpoints.scss";
 @import "./assets/scss/general.scss";
+@import "./assets/scss/positioning.scss";
+@import "./assets/scss/colors.scss";
