--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -1,11 +1,12 @@
 * {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body,
 html {
   box-sizing: border-box;
-  color: $dark;
   font-family: moon-light;
   height: 100%;
   justify-content: center;
