--- a/src/components/Burger/Burger.scss
+++ b/src/components/Burger/Burger.scss
@@ -1,16 +1,16 @@
 .burger {
   display: inline-block;
-  position: absolute;
-  right: 10px;
-  top: 10px;
+  left: 20px;
+  position: fixed;
+  top: 20px;
+  transition: all 0.3s ease;
+  z-index: 11;
 
   &.active {
+    left: 325px;
+
     .burger__button {
       transform: rotate(-180deg);
-    }
-
-    .burger__bar {
-      background-color: white;
     }
 
     .burger__bar--1 {
@@ -37,7 +37,6 @@
     position: relative;
     transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     width: 32px;
-    z-index: 999;
 
     &:hover {
       .burger__bar--2 {
@@ -51,7 +50,7 @@
   }
 
   &__bar {
-    background-color: #130f40;
+    background-color: #2b2b2b;
     height: 2px;
     left: 6px;
     margin-top: -1px;
