--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,14 +1,22 @@
 @import "../../style.scss";
 
 .sidebar {
+  transition: all 0.3s ease;
+
   &__backdrop {
-    background-color: rgba(0, 0, 0, 0.5);
-    cursor: pointer;
+    background-color: rgba(30, 30, 30, 0);
     height: 100vh;
     left: 0;
     position: fixed;
     top: 0;
+    transition: all 0.3s ease;
     width: 100vw;
+    z-index: -1;
+
+    &--active {
+      background-color: rgba(30, 30, 30, 0.7);
+      z-index: 0;
+    }
   }
 
   &__panel {
@@ -16,21 +24,60 @@
     height: 100vh;
     left: 0;
     overflow-y: auto;
-    padding: 3rem 20px 2rem;
     position: fixed;
     top: 0;
-    width: 300px;
-    z-index: 999;
+    transition: all 0.3s ease;
+    width: 0;
+    z-index: 10;
+
+    &--active {
+      width: 380px;
+    }
   }
-}
 
-.slide-enter-active,
-.slide-leave-active {
-  transition: transform 0.2s ease;
-}
+  &__list-wrapper {
+    height: 100%;
+    position: relative;
+    width: 100%;
+  }
 
-.slide-enter,
-.slide-leave-to {
-  transform: translateX(-100%);
-  transition: all 150ms ease-in 0s;
+  &__list {
+    left: 50%;
+    list-style: none;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &__list-item {
+    display: block;
+    font-size: 20px;
+    margin: 100px 0;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  &__list-link {
+    color: #2b2b2b;
+    position: relative;
+    text-decoration: none;
+
+    &:after {
+      background-color: #2b2b2b;
+      bottom: -2px;
+      content: "";
+      display: inline-block;
+      height: 1px;
+      left: 0;
+      position: absolute;
+      transition: all 0.3s ease;
+      width: 0;
+    }
+
+    &:hover {
+      &:after {
+        width: 100%;
+      }
+    }
+  }
 }
