--- a/src/components/Burger/Burger.scss
+++ b/src/components/Burger/Burger.scss
@@ -35,12 +35,26 @@
     height: 30px;
     pointer-events: all;
     position: relative;
-    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
     width: 32px;
 
-    &:hover {
+    &:not(.active &) {
+      &:hover {
+        .burger__bar--2 {
+          transform: scaleX(1);
+        }
+      }
+    }
+
+    .active & {
       .burger__bar--2 {
-        transform: scaleX(1);
+        transition: none;
+      }
+
+      &:hover {
+        .burger__bar--2 {
+          transform: unset;
+        }
       }
     }
 
@@ -57,9 +71,9 @@
     position: absolute;
     right: 6px;
     top: 50%;
-    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1),
-      opacity 0.3s cubic-bezier(0.165, 0.84, 0.44, 1),
-      background-color 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1),
+      opacity 0.5s cubic-bezier(0.165, 0.84, 0.44, 1),
+      background-color 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
     width: auto;
 
     &--1 {
