--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -10,12 +10,13 @@
     position: fixed;
     top: 0;
     transition: all 0.3s ease;
+    visibility: hidden;
     width: 100vw;
-    z-index: -1;
+    z-index: 1;
 
     &--active {
       background-color: rgba(30, 30, 30, 0.7);
-      z-index: 0;
+      visibility: visible;
     }
   }
 
