--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -4,16 +4,57 @@
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr;
-  margin: 20px;
+  // margin: 20px;
+  margin-left: 45px;
+  margin-right: 20px;
 
   @include media-breakpoint-up(md) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 60px;
+  }
+
+  @include media-breakpoint-up(xl) {
+    margin: 20px;
   }
 
   &__tile {
     &--featured {
       grid-column: 1/3;
       grid-row: 2/4;
+    }
+  }
+
+  .cool-lightbox {
+    &__slide {
+      img {
+        max-width: 85%;
+      }
+    }
+
+    .cool-lightbox-toolbar {
+      &__btn {
+        background: none;
+      }
+    }
+
+    .cool-lightbox-button {
+      padding: 8px;
+
+      &__icon {
+        background: none;
+      }
+
+      &--next {
+        @include media-breakpoint-up(xl) {
+          right: 37px;
+        }
+      }
+
+      &--prev {
+        @include media-breakpoint-up(xl) {
+          left: 37px;
+        }
+      }
     }
   }
 }
