--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -12,11 +12,25 @@
   }
 
   &__title {
+    animation: fadeIn 1s ease backwards;
+    animation-delay: 0.3s;
     font-size: 80px;
     margin-bottom: 40px;
   }
 
   &__subtitle {
+    animation: fadeIn 1s ease backwards;
+    animation-delay: 0.6s;
     font-size: 65px;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
