--- a/src/components/ContactDetails/ContactDetails.scss
+++ b/src/components/ContactDetails/ContactDetails.scss
@@ -5,12 +5,25 @@
   justify-content: center;
   position: relative;
 
-  &__heading {
+  // &__heading {
+  //   display: inline-block;
+  //   font-size: 30px;
+  //   left: 100px;
+  //   position: absolute;
+  //   top: 20px;
+  // }
+
+  &__home-name {
     display: inline-block;
     font-size: 30px;
     left: 100px;
     position: absolute;
     top: 20px;
+  }
+
+  &__home-link {
+    color: #2b2b2b;
+    text-decoration: none;
   }
 
   &__list {
