--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -3,7 +3,7 @@
 .grid {
   display: grid;
   grid-gap: 15px;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   margin-left: 30px;
   margin-right: 30px;
   padding-bottom: 100px;
@@ -19,8 +19,22 @@
 
   &__tile {
     &--featured {
-      grid-column: 1/3;
-      grid-row: 2/4;
+      @include media-breakpoint-up(md) {
+        &--1 {
+          grid-column: 1/3;
+          grid-row: 2/4;
+        }
+
+        &--2 {
+          grid-column: 3/5;
+          grid-row: 4/6;
+        }
+
+        &--3 {
+          grid-column: 1/3;
+          grid-row: 6/8;
+        }
+      }
     }
   }
 
@@ -77,7 +91,7 @@
 
     @for $i from 1 through 50 {
       &:nth-child(#{$i}) {
-        animation-delay: $i * (0.3s);
+        animation-delay: $i * (0.2s);
       }
     }
   }
@@ -86,11 +100,11 @@
 @keyframes slideUpFade {
   0% {
     opacity: 0;
-    transform: translateY(100px);
+    transform: translateY(100px) scale(1.1);
   }
 
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0) scale(1);
   }
 }
