--- a/src/components/GridTile/GridTile.scss
+++ b/src/components/GridTile/GridTile.scss
@@ -10,7 +10,7 @@
   width: 100%;
 
   &__height-setter {
-    padding-bottom: 130%; // makes height equivilent to width
+    padding-bottom: 130%;
   }
 
   &__image-wrapper {
@@ -51,5 +51,21 @@
     .grid-tile__overlay {
       opacity: 1;
     }
+  }
+}
+
+.slideUpFade.animate-active {
+  animation: slideUpFade 1s ease 0.5s backwards;
+}
+
+@keyframes slideUpFade {
+  0% {
+    opacity: 0;
+    transform: translateY(100px) scale(1.3);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
   }
 }
