--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -7,6 +7,7 @@
   margin-left: 30px;
   margin-right: 30px;
   padding-bottom: 100px;
+  padding-top: 100px;
 
   @include media-breakpoint-up(md) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
