--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,5 +1,7 @@
 .hero {
   height: 100vh;
+  // margin-bottom: 250px;
+  overflow: hidden;
   position: relative;
   text-align: center;
 
@@ -7,8 +9,9 @@
     left: 50%;
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
+    transform: translate(0, -50%);
+    width: 40%;
+    z-index: 2;
   }
 
   &__title {
@@ -22,6 +25,39 @@
     animation: fadeIn 1s ease backwards;
     animation-delay: 0.6s;
     font-size: 65px;
+  }
+
+  // &__overlay {
+  //   background-color: rgba(black, 0.5);
+  //   bottom: 0;
+  //   left: 0;
+  //   position: absolute;
+  //   right: 0;
+  //   top: 0;
+  //   z-index: 1;
+  // }
+
+  // &__image-wrapper {
+  //   bottom: -37%;
+  //   left: -25%;
+  //   position: absolute;
+  //   right: -25%;
+  //   top: 0;
+  // }
+
+  &__image-wrapper {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  &__image {
+    height: 100%;
+    object-fit: cover;
+    // object-position: 10% 10%;
+    width: 100%;
   }
 }
 
