--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,6 +1,7 @@
 @import "../../style.scss";
 
 .nav {
+  // background-color: $c-white;
   height: 80px;
   position: fixed;
   top: 0;
@@ -8,16 +9,20 @@
   z-index: 9;
 
   &__wrapper {
-    align-items: flex-end;
+    align-items: center;
     display: flex;
     height: 100%;
-    justify-content: flex-end;
+    justify-content: space-between;
+  }
+
+  &__home-wrapper {
+    margin-left: 30px;
+    z-index: 1;
   }
 
   &__panel {
     align-items: center;
-    // background-color: $c-white;
-    background-color: $c-black;
+    background-color: $c-white;
     bottom: 0;
     display: flex;
     height: 100vh;
@@ -67,29 +72,28 @@
   }
 
   &__list-link {
-    // color: #2b2b2b;
-    color: $c-white;
+    color: $c-black;
     font-size: 26px;
     position: relative;
     text-decoration: none;
 
-    &:after {
-      // background-color: #2b2b2b;
-      background-color: $c-white;
-      bottom: -2px;
-      content: "";
-      display: inline-block;
-      height: 1px;
-      left: 0;
-      position: absolute;
-      transition: all 0.3s ease;
-      width: 0;
-    }
+    // &:after {
+    //   background-color: $c-black;
+    //   bottom: -2px;
+    //   content: "";
+    //   display: inline-block;
+    //   height: 1px;
+    //   left: 0;
+    //   position: absolute;
+    //   transition: all 0.3s ease;
+    //   width: 0;
+    // }
 
     &:hover {
-      &:after {
-        width: 100%;
-      }
+      color: rgba($c-black, 0.7);
+      // &:after {
+      //   width: 100%;
+      // }
     }
   }
 
@@ -100,12 +104,12 @@
   }
 
   .nav-slide-leave-active {
-    transition: all 0.3s ease-in 0.5s;
+    transition: all 0.3s ease-out 0.5s;
   }
 
   .nav-slide-enter,
   .nav-slide-leave-to {
-    opacity: 0;
+    // opacity: 0;
     transform: translateY(-100%);
   }
 
