--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -7,7 +7,7 @@
 body,
 html {
   box-sizing: border-box;
-  // font-family: Garamond, Georgia, serif;
+  font-family: Helvetica, serif;
   height: 100%;
   justify-content: center;
   margin: 0;
