--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,6 +1,8 @@
+@import "../../style.scss";
+
 .hero {
+  animation: 2s ease fadeIn 0.3s backwards;
   height: 100vh;
-  // margin-bottom: 250px;
   overflow: hidden;
   position: relative;
   text-align: center;
@@ -27,24 +29,6 @@
     font-size: 65px;
   }
 
-  // &__overlay {
-  //   background-color: rgba(black, 0.5);
-  //   bottom: 0;
-  //   left: 0;
-  //   position: absolute;
-  //   right: 0;
-  //   top: 0;
-  //   z-index: 1;
-  // }
-
-  // &__image-wrapper {
-  //   bottom: -37%;
-  //   left: -25%;
-  //   position: absolute;
-  //   right: -25%;
-  //   top: 0;
-  // }
-
   &__image-wrapper {
     bottom: 0;
     left: 0;
@@ -56,8 +40,11 @@
   &__image {
     height: 100%;
     object-fit: cover;
-    // object-position: 10% 10%;
     width: 100%;
+
+    @include media-breakpoint-up(lg) {
+      width: auto;
+    }
   }
 }
 
