--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -22,7 +22,8 @@
 
   &__panel {
     align-items: center;
-    background-color: $c-white;
+    background-color: #f9f9f9;
+    // background-color: $c-white;
     bottom: 0;
     display: flex;
     height: 100vh;
