--- a/src/components/Burger/Burger.scss
+++ b/src/components/Burger/Burger.scss
@@ -1,73 +1,50 @@
 @import "../../style.scss";
 
 .hamburger-menu {
+  cursor: pointer;
   display: block;
-  margin: 30px;
   position: relative;
   -webkit-user-select: none;
   user-select: none;
   z-index: 10;
 
-  input {
-    cursor: pointer;
-    display: block;
-    height: 36px;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: -7px;
-    -webkit-touch-callout: none;
-    width: 20px;
-    z-index: 2;
+  &__wrapper {
+    height: 20px;
+    width: 19px;
+  }
 
-    &:checked ~ span {
-      background: $c-black;
-      opacity: 1;
-      transform: rotate(-45deg) translate(-1px, -1px);
-      width: 24px;
-    }
-
-    &:checked ~ span:nth-last-child(2) {
-      opacity: 0;
-      transform: rotate(0deg) scale(0.2, 0.2);
-    }
-
-    &:checked ~ span:nth-last-child(3) {
-      transform: rotate(45deg) translate(-4px, -3px);
-    }
-
-    &:hover ~ span:nth-last-child(1) {
-      transform: translate(0, 3px);
-    }
-
-    &:hover ~ span:nth-last-child(3) {
-      transform: translate(0, -3px);
-    }
-
-    // the below effectively turns off hover state when icon is in cross form
-    &:hover {
-      &:checked ~ span {
-        transform: rotate(-45deg) translate(-1px, -1px);
-        width: 24px;
+  &:hover {
+    .hamburger-menu__span {
+      &--1 {
+        transform: translate(0, -3px);
       }
-    }
 
-    &:hover {
-      &:checked ~ span:nth-last-child(2) {
-        opacity: 0;
-        transform: rotate(0deg) scale(0.2, 0.2);
-      }
-    }
-
-    &:hover {
-      &:checked ~ span:nth-last-child(3) {
-        transform: rotate(45deg) translate(-4px, -3px);
-        width: 24px;
+      &--3 {
+        transform: translate(0, 3px);
       }
     }
   }
 
-  span {
+  &.checked {
+    .hamburger-menu__span {
+      width: 24px;
+
+      &--1 {
+        transform: rotate(45deg) translate(0, -3px);
+      }
+
+      &--2 {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+      }
+
+      &--3 {
+        transform: rotate(-45deg) translate(-1px, 3px);
+      }
+    }
+  }
+
+  &__span {
     background: $c-black;
     display: block;
     height: 2px;
@@ -80,12 +57,12 @@
     width: 20px;
     z-index: 1;
 
-    &:first-child {
+    &--1 {
       transform-origin: 0% 0%;
     }
 
-    &:nth-last-child(2) {
-      transform-origin: 0% 100%;
+    &--2 {
+      transform-origin: 50% 100%;
     }
   }
 }
