Added fonts and created active state for nav

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,4 @@
+@import "./assets/scss/fonts.scss";
 @import "./assets/scss/breakpoints.scss";
 @import "./assets/scss/general.scss";
 @import "./assets/scss/positioning.scss";
