--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -9,6 +9,7 @@
 
   &__burger-wrapper {
     margin: 30px;
+    padding-top: 10px;
   }
 
   &__wrapper {
@@ -19,6 +20,7 @@
   }
 
   &__home-wrapper {
+    font-family: NeueMedium;
     margin-left: 30px;
     z-index: 1;
   }
@@ -52,12 +54,28 @@
     display: block;
     font-size: 20px;
     margin: 0 100px;
+    position: relative;
     text-align: center;
     text-decoration: none;
 
     @for $i from 1 through 3 {
       &:nth-child(#{$i}) {
         animation-delay: 0.2s + ($i * 0.1s);
+      }
+    }
+
+    &.active {
+      &:after {
+        background-color: $c-black;
+        bottom: -7px;
+        content: "";
+        display: inline-block;
+        height: 2px;
+        left: 50%;
+        position: absolute;
+        transform: translate(-50%);
+        transition: all 0.3s ease;
+        width: 75%;
       }
     }
   }
@@ -80,23 +98,8 @@
     position: relative;
     text-decoration: none;
 
-    // &:after {
-    //   background-color: $c-black;
-    //   bottom: -2px;
-    //   content: "";
-    //   display: inline-block;
-    //   height: 1px;
-    //   left: 0;
-    //   position: absolute;
-    //   transition: all 0.3s ease;
-    //   width: 0;
-    // }
-
     &:hover {
       color: rgba($c-black, 0.7);
-      // &:after {
-      //   width: 100%;
-      // }
     }
   }
 
