Refactored nav and finessed its behaviour, adjusted hero and added global detect mouse function.

--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -19,3 +19,11 @@ html {
   margin: auto;
   max-width: 1330px;
 }
+
+:focus {
+  outline: #08f auto 2px;
+}
+
+body.using-mouse :focus {
+  outline: none;
+}
