--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -7,28 +7,6 @@
   position: relative;
   text-align: center;
 
-  &__text-wrapper {
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    width: 40%;
-    z-index: 2;
-  }
-
-  &__title {
-    animation: fadeIn 1s ease backwards;
-    animation-delay: 0.3s;
-    font-size: 80px;
-    margin-bottom: 40px;
-  }
-
-  &__subtitle {
-    animation: fadeIn 1s ease backwards;
-    animation-delay: 0.6s;
-    font-size: 65px;
-  }
-
   &__image-wrapper {
     bottom: 0;
     left: 0;
@@ -40,10 +18,20 @@
   &__image {
     height: 100%;
     object-fit: cover;
+    padding-top: 100px;
     width: 100%;
+
+    @include media-breakpoint-up(md) {
+      padding-top: 0;
+    }
 
     @include media-breakpoint-up(lg) {
       width: auto;
+    }
+
+    // to catch ipad pro portrait dimensions
+    @media only screen and (max-height: 1366px) and (min-height: 1200px) {
+      width: 100%;
     }
   }
 }
