--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -94,6 +94,7 @@
 
   &__list-link {
     color: $c-black;
+    cursor: pointer;
     font-size: 26px;
     position: relative;
     text-decoration: none;
@@ -103,8 +104,7 @@
     }
   }
 
-  // transitions and animations
-
+  // TRANSITIONS AND ANIMATIONS
   .nav-slide-enter-active {
     transition: all 0.3s ease-out;
   }
