--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -45,3 +45,15 @@
     opacity: 1;
   }
 }
+
+@keyframes fadeInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
