--- a/src/components/ContactDetails/ContactDetails.scss
+++ b/src/components/ContactDetails/ContactDetails.scss
@@ -23,6 +23,8 @@
     }
 
     &--1 {
+      // background-color: rgb(1, 81, 81);
+      // background-color: rgba(59, 74, 84, 0.2);
       background-color: $c-light-grey;
       height: 300px;
       margin-top: 80px;
