Moved nac functionality into main.vue, corrected some nav routing functionality and made the gallery fully responsive.

--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -6,21 +6,41 @@
   grid-template-columns: 1fr;
   margin-left: 30px;
   margin-right: 30px;
+  overflow: hidden;
   padding-bottom: 100px;
   padding-top: 100px;
 
   @include media-breakpoint-up(md) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 60px;
+    grid-template-columns: 1fr 1fr;
+    margin: 80px;
+    padding: 0;
   }
 
   @include media-breakpoint-up(xl) {
-    margin: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 80px 20px;
   }
 
   &__tile {
     &--featured {
       @include media-breakpoint-up(md) {
+        &--1 {
+          grid-column: 1/3;
+          grid-row: 3/5;
+        }
+
+        &--2 {
+          grid-column: 1/3;
+          grid-row: 7/9;
+        }
+
+        &--3 {
+          grid-column: 1/3;
+          grid-row: 11/13;
+        }
+      }
+
+      @include media-breakpoint-up(xl) {
         &--1 {
           grid-column: 1/3;
           grid-row: 2/4;
@@ -47,34 +67,59 @@
     &__slide {
       img {
         cursor: auto;
-        max-width: 85%;
+        max-width: 80%;
+
+        @include media-breakpoint-up(md) {
+          max-width: 85%;
+        }
       }
     }
 
     .cool-lightbox-toolbar {
       &__btn {
         background: none;
+        margin: 10px;
+        padding: 4px;
 
         @include media-breakpoint-up(xl) {
           display: none;
+        }
+
+        // to make close button appear on ipad pro landscape
+        @media only screen and (max-width: 1400px) and (min-width: 1200px) and (max-height: 1050px) {
+          display: flex;
         }
       }
     }
 
     .cool-lightbox-button {
       padding: 8px;
+      width: 48px;
 
       &__icon {
         background: none;
+        padding: 0;
       }
 
       &--next {
+        padding-right: 0;
+
+        @include media-breakpoint-up(lg) {
+          right: 2%;
+        }
+
         @include media-breakpoint-up(xl) {
           right: 37px;
         }
       }
 
       &--prev {
+        padding-left: 0;
+
+        @include media-breakpoint-up(lg) {
+          left: 2%;
+        }
+
         @include media-breakpoint-up(xl) {
           left: 37px;
         }
