Wrapped hover states in pointer: fine queries

--- a/src/components/Burger/Burger.scss
+++ b/src/components/Burger/Burger.scss
@@ -14,13 +14,15 @@
   }
 
   &:hover {
-    .hamburger-menu__span {
-      &--1 {
-        transform: translate(0, -3px);
-      }
+    @media (pointer: fine) {
+      .hamburger-menu__span {
+        &--1 {
+          transform: translate(0, -3px);
+        }
 
-      &--3 {
-        transform: translate(0, 3px);
+        &--3 {
+          transform: translate(0, 3px);
+        }
       }
     }
   }
