--- a/src/components/ContactDetails/ContactDetails.scss
+++ b/src/components/ContactDetails/ContactDetails.scss
@@ -110,12 +110,14 @@
     }
 
     &:hover {
-      &:after {
-        background-color: rgba(255, 255, 255, 0.3);
-      }
+      @media (pointer: fine) {
+        &:after {
+          background-color: rgba(255, 255, 255, 0.3);
+        }
 
-      .contact-details__icon {
-        transform: scale(1.2);
+        .contact-details__icon {
+          transform: scale(1.2);
+        }
       }
     }
   }
