--- a/src/components/AboutDetails/AboutDetails.scss
+++ b/src/components/AboutDetails/AboutDetails.scss
@@ -4,13 +4,15 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   justify-content: center;
-  min-height: 100vh;
   overflow: hidden;
   position: relative;
 
   @include media-breakpoint-up(md) {
     flex-direction: row-reverse;
+    overflow: hidden;
   }
 
   &__section {
@@ -23,14 +25,12 @@
     }
 
     &--1 {
-      bottom: 0;
-      left: 0;
-      position: absolute;
-      right: 0;
-      top: 40px;
-
       @include media-breakpoint-up(md) {
+        bottom: 0;
         left: -55px;
+        position: absolute;
+        right: 0;
+        top: 40px;
       }
 
       @include media-breakpoint-up(lg) {
@@ -45,6 +45,7 @@
     &--2 {
       bottom: 0;
       left: 0;
+      overflow: scroll;
       position: absolute;
       right: 0;
       top: 0;
@@ -106,11 +107,16 @@
   }
 
   &__image-wrapper {
+    bottom: -50px;
     height: 100%;
+    left: 0;
+    position: absolute;
     width: 100%;
 
     @include media-breakpoint-up(lg) {
+      bottom: 0;
       height: 105%;
+      position: relative;
       width: 105%;
     }
 
@@ -129,7 +135,8 @@
 
   &__text-wrapper {
     margin-top: 100px;
-    padding: 0 30px;
+    overflow: scroll;
+    padding: 0 30px 30px;
 
     @include media-breakpoint-up(md) {
       margin-top: 0;
