--- a/src/components/ContactDetails/ContactDetails.scss
+++ b/src/components/ContactDetails/ContactDetails.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   justify-content: center;
   overflow: hidden;
   position: relative;
