--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -7,6 +7,10 @@
   width: 100%;
   z-index: 9;
 
+  &--white {
+    background-color: $c-white;
+  }
+
   &__burger-wrapper {
     margin: 30px;
     padding-top: 10px;
