--- a/src/components/GridTile/GridTile.scss
+++ b/src/components/GridTile/GridTile.scss
@@ -28,7 +28,7 @@
 
   &__image {
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
     padding: 15px;
     transition: all 0.5s ease;
