--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -59,7 +59,8 @@
 
   &__list-item {
     animation: 0.5s navFadeInMobile ease-out forwards;
-    display: block;
+    display: flex;
+    align-items: center;
     font-size: 20px;
     margin: 40px 100px;
     position: relative;
@@ -142,7 +143,6 @@
     color: $c-white;
     cursor: pointer;
     font-size: 26px;
-    position: relative;
     text-decoration: none;
 
     &--home {
