--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -52,7 +52,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
 
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
       flex-direction: row;
     }
   }
@@ -61,19 +61,27 @@
     animation: 0.5s navFadeInMobile ease-out forwards;
     display: flex;
     align-items: center;
-    font-size: 20px;
-    margin: 40px 100px;
+    font-size: 22px;
+    margin: 30px 0;
     position: relative;
     text-align: center;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
 
     @include media-breakpoint-up(md) {
       animation: 0.5s navFadeIn ease-out forwards;
-      margin: 0 50px;
+      margin: 40px 0;
+      font-size: 26px;
+    }
+
+    @include media-breakpoint-up(lg) {
+      margin: 0 40px;
     }
 
     @include media-breakpoint-up(xl) {
-      margin: 0 90px;
+      margin: 0 60px;
+      font-size: 32px;
     }
 
     @for $i from 1 through 3 {
@@ -85,6 +93,26 @@
 
   &__list-link {
     transition: color 0.3s ease 0.7s;
+    color: $c-white;
+    cursor: pointer;
+    position: relative;
+    text-decoration: none;
+
+    &--home {
+      color: $c-black;
+      transition: color 0.3s ease 0.7s;
+
+      @include media-breakpoint-up(md) {
+        font-size: 26px;
+      }
+
+      &:hover {
+        @media (pointer: fine) {
+          opacity: 0.7;
+          transition-delay: 0;
+        }
+      }
+    }
 
     &.active {
       &:after {
@@ -97,7 +125,7 @@
         position: absolute;
         transform: translate(-50%);
         transition: all 0.3s ease;
-        width: 75%;
+        width: 60%;
       }
 
       &:hover {
@@ -126,6 +154,8 @@
     }
 
     .nav__list-link {
+      transition-delay: 0s;
+      
       &:hover {
         @media (pointer: fine) {
           color: rgba($c-white, 0.7);
@@ -135,25 +165,6 @@
       &--home {
         color: $c-white;
         transition-delay: 0s;
-      }
-    }
-  }
-
-  &__list-link {
-    color: $c-white;
-    cursor: pointer;
-    font-size: 26px;
-    text-decoration: none;
-
-    &--home {
-      color: $c-black;
-      transition: color 0.3s ease 0.7s;
-
-      &:hover {
-        @media (pointer: fine) {
-          opacity: 0.7;
-          transition-delay: 0;
-        }
       }
     }
   }
